# cookingAssistant

./: .gitignore  .ycm_extra_conf.py  CFoodDatabase.cpp  CFoodDatabase.h  CFoodMenu.cpp  CFoodMenu.h  CMakeLists.txt  CMealDB.cpp  CMealDB.h  CMealGenerator.cpp  CMealGenerator.h  CookingPlanner.out  Makefile.in  README  README.md  configure  configure.ac  groceryList.txt  main.cpp  makefile  menu.json
src/: CFoodDatabase.cpp  CFoodDatabase.h  CListGenerator.cpp  CListGenerator.h  CMakeLists.txt  CMealDB.cpp  CMealDB.h  CMealGenerator.cpp  CMealGenerator.h  COptionsHandler.cpp  COptionsHandler.h  ConsoleMenuPrinter.cpp  ConsoleMenuPrinter.h  Database.cpp  GroceryListPrinter.cpp  GroceryListPrinter.h  ListGenerator.cpp  ListGenerator.h  Makefile.am  Makefile.in  Meal.cpp  Meal.h  MealBuilder.cpp  MealBuilder.h  MealDB.cpp  MealDB.h  MealGenerator.cpp  MealMenuPrinter.cpp  MenuFilePrinter.cpp  MenuFilePrinter.h  OptionsHandler.cpp  OptionsHandler.h  Print.h  TagDB.h  main.cpp
src/.deps/: CFoodDatabase.Po  CFoodMenu.Po  CMealDB.Po  CMealGenerator.Po  main.Po
src/Database/: CMakeLists.txt  Database.h  MealDB.cpp  MealDB.h  TagDB.cpp  TagDB.h
src/Generator/: CMakeLists.txt  ListGenerator.cpp  MealGenerator.cpp  MealGenerator.h
src/Meal/: CMakeLists.txt  Meal.cpp  Meal.h  MealBuilder.cpp  MealBuilder.h
src/UserInterface/: CMakeLists.txt  GroceryListPrinter.cpp  MealMenuPrinter.cpp  MealMenuPrinter.h  OptionsHandler.cpp
src/json/: CMakeLists.txt
